--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,12 @@
       content="Web site created using create-react-app"
     />
     <meta name="google-site-verification" content="VBKO1pOrm3hHAfFBkA8gdk5nNzGqyS2M99Zasztmfys" />
+
+    <!-- ads tags -->
+    <meta name="9411b622f9754b3734c20cc499a56d0caa1f2b5b" content="9411b622f9754b3734c20cc499a56d0caa1f2b5b" />
+    <meta name="referrer" content="no-referrer-when-downgrade" />
+
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
